addes self update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(mean_noNA_noInf)
 export(min_noNA_noInf)
 export(print_if_debug)
 export(print_if_verbose)
+export(self_update)
 export(tidy_column_names)
 export(tidy_missing_values)
 export(tidy_unwanted_characters)
