implemented testing startet with snippets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,10 @@ export(mean_noNA_noInf)
 export(min_noNA_noInf)
 export(print_if_debug)
 export(print_if_verbose)
+export(reverse_factor_levels)
 export(self_update)
+export(snippet_full_line_title)
+export(snippet_section)
 export(tidy_column_names)
 export(tidy_missing_values)
 export(tidy_unwanted_characters)
