--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,24 @@
 Package: waRRior
 Title: waRRior
-Version: 0.0.0.9000
+Version: 0.0.2
 Authors@R: person("Joel", "Federer-Gsponer", email = "jgsponer@gmail.com", role = c("aut", "cre"))
 Description: Custom functions to fight with everyday data.
 Depends: R (>= 3.5.0)
-License: "THE BEER-WARE LICENSE" (Revision 42)
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports:
+    utils,
+    stats,
+    graphics,
     tidyverse,
     crayon,
     broom,
     plotly,
     RJSONIO,
-    RCurl
+    RCurl,
+    devtools,
+    dplyr,
+    stringr
+Suggests: testthat
