--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(RUN)
 export(SETUP)
 export(SRC)
 export(TBL)
+export(cluster_heatmap)
 export(dplyr_summary)
 export(google_colors_accents)
 export(google_colors_load)
@@ -30,6 +31,7 @@ export(shiny_symlink)
 export(snippet_full_line_title)
 export(snippet_section)
 export(snippet_timestamp)
+export(sum_units)
 export(tidy_column_names)
 export(tidy_missing_values)
 export(tidy_unwanted_characters)
