added impute and errorWarrior

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,12 @@ export(SRC)
 export(TBL)
 export(cluster_heatmap)
 export(dplyr_summary)
+export(dplyr_tuple)
+export(errorWarrior)
 export(google_colors_accents)
 export(google_colors_load)
+export(heatmap_extract_cluster)
+export(impute)
 export(max_noNA_noInf)
 export(mean_noNA_noInf)
 export(median_noNA_noInf)
