--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,14 @@ export(RUN)
 export(SETUP)
 export(SRC)
 export(TBL)
+export(categorical_cutoff)
 export(cluster_heatmap)
+export(compare_pearson_r)
+export(convert_to_matrix)
+export(convert_to_tibble)
+export(create_tibble)
+export(detach_warrior)
+export(distribution_among_clusters)
 export(dplyr_summary)
 export(dplyr_tuple)
 export(errorWarrior)
@@ -15,10 +22,14 @@ export(google_colors_accents)
 export(google_colors_load)
 export(heatmap_extract_cluster)
 export(impute)
+export(kable_styling_with_css)
 export(max_noNA_noInf)
 export(mean_noNA_noInf)
 export(median_noNA_noInf)
+export(message_glue)
 export(min_noNA_noInf)
+export(plot_survival)
+export(plot_tsne)
 export(print_if_debug)
 export(print_if_verbose)
 export(project_add_src)
@@ -27,6 +38,7 @@ export(project_run)
 export(project_setup_files)
 export(project_setup_structure)
 export(project_use_library)
+export(refresh_warrior)
 export(reverse_factor_levels)
 export(sd_noNA_noInf)
 export(self_update)
@@ -35,7 +47,11 @@ export(shiny_symlink)
 export(snippet_full_line_title)
 export(snippet_section)
 export(snippet_timestamp)
+export(stacked_percentage_plot)
 export(sum_units)
+export(survival_warrior)
 export(tidy_column_names)
 export(tidy_missing_values)
+export(tidy_survfit)
 export(tidy_unwanted_characters)
+export(waRRior_p)
